<resources>
    <string name="app_name">Help &amp; Care</string>
    <string name="logIn">"PRIJAVI SE"</string>
    <string name="password">"LOZINKA"</string>
    <string name="type">"TIP NALOGA"</string>
    <string name="changeUsername">"PROMENI KORISNIČKO IME"</string>
    <string name="changePassword">"PROMENI LOZINKU"</string>
    <string name="logOut">"ODJAVI SE"</string>
    <string name="username">"KORISNIČKO IME"</string>
    <string name="show">"PRIKAŽI"</string>
    <string name="hide">"SAKRIJ"</string>
    <string name="noAcc">"NEMAŠ NALOG?\nREGISTRUJ SE"</string>
    <string name="task">"ZADATAK"</string>
    <string name="logInAdmin">"PRIJAVI SE KAO\nADMINISTRATOR"</string>
    <string name="oldPassword">"STARA LOZINKA"</string>
    <string name="newPassword">"NOVA LOZINKA"</string>
    <string name="repeatPassword">"PONOVITE LOZINKU"</string>
    <string name="register">"REGISTRUJ SE"</string>
    <string name="haveAcc">"IMAŠ NALOG?\nPRIJAVI SE"</string>
    <string name="regsiterTitle">"REGISTRACIJA"</string>
    <string name="admin">"ADMINISTRATOR"</string>

    <string-array name="type">
        <item>Lekar Opšte Prakse</item>
        //0
        <item>Medicinski Tehničar</item>
        //1
        <item>Volonter</item>
        //2
        <item>Administrator</item>
        //3
    </string-array>
</resources>
